5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1712_2495.log
== TEST (2019-05-08 16:29:23) 
-- CODE:

num = int(input("Digite um numero: "))

while (num/2 == 0) :
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 5
    if (CONDIÇÃO DE PARIDADE):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:31:10) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:31:55) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:33:27) 
-- CODE:


num = int(input("Digite um numero: "))

while (num > -1) :
	if (num/2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:34:29) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 print ("PAR")
	else:
		print  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:34:39) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 print ("PAR")
	else:
		print  ("IMPAR")
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:35:51) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 print ("PAR")
	else:
		print  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:36:13) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:36:27) 
-- CODE:


num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:38:35) 
-- CODE:
num = int(input("Digite um numero: "))

while (num != -1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:38:53) 
-- CODE:
num = int(input("Digite um numero: "))

while (num = -1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- ERROR:
File "XXXX", line 3
    while (num = -1) :
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:38:59) 
-- CODE:
num = int(input("Digite um numero: "))

while (num == -1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- ERROR:
File "XXXX", line 3
    while (num = -1) :
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:39:56) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 16:40:05) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num/2==0):
		 mensagem =  ("PAR")
	else:
		mensagem =  ("IMPAR")
	
	print(mensagem)
	
	num = int(input("Digite um numero:"))

-- EXECUTION TIME:
0.303046
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2495/main.py", line 11, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:40:44) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num/2==0):
		 print ("PAR")
	else:
		 print ("IMPAR")
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:41:07) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num % 2==0):
		 print ("PAR")
	else:
		 print ("IMPAR")
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 16:41:24) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num % 2==0):
		 print ("PAR")
	else:
		 print ("IMPAR")
	num = int(input("Digite um numero:"))

-- EXECUTION TIME:
0.191737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2495/main.py", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:41:26) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num % 2==0):
		 print ("PAR")
	else:
		 print ("IMPAR")
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:41:51) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:41:57) 
-- CODE:
num = int(input("Digite um numero: "))

while (num>=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:42:23) 
-- CODE:
num = int(input("Digite um numero: "))

while (num!=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:42:29) 
-- CODE:
num = int(input("Digite um numero: "))

while (num!=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 16:42:49) 
-- CODE:
num = int(input("Digite um numero: "))

while (num!=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 16:42:52) 
-- CODE:
num = int(input("Digite um numero: "))

while (num!=-1) :
	if (num % 2==0):
		 mensagem = ("PAR")
	else:
		 mensagem = ("IMPAR")
			
	print (mensagem)
	num = int(input("Digite um numero:"))

-- EXECUTION TIME:
0.186721
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
